--- a/src/index.html
+++ b/src/index.html
@@ -2,17 +2,19 @@
 <html>
 <head>
   <meta charset="utf-8">
-  <title>LearnAngular2</title>
+  <title>Deck of Cards</title>
   <base href="/">
 
   {{#unless environment.production}}
   <script src="/ember-cli-live-reload.js" type="text/javascript"></script>
   {{/unless}}
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link rel="stylesheet" href="http://yui.yahooapis.com/pure/0.6.0/pure-min.css">
 </head>
 <body>
-  <app-root>Loading...</app-root>
+  <app-root>Loading Deck...</app-root>
 
   
 
